--- a/style.css
+++ b/style.css
@@ -521,18 +521,18 @@ input[type=password] {
 
 .alignMateTop {
     font-family: arial;
-    color: white;
+    color: black;
     margin-left: 5%;
     margin-right: 10%;
     margin-top: 10px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     padding-top: 0px;
     height: auto;
     font-size: 20px;
     font-weight: 600;
     transform: scale(1, 1.3);
     text-align: left;
-    text-shadow: rgb(0, 0, 0) 1px 0px 30px;
+    /* text-shadow: rgb(0, 0, 0) 1px 0px 30px; */
 }
 
 .digitalScorecardFront {
@@ -1394,13 +1394,13 @@ a {
 }
 
 .secondImage {
-    background-image: url(IMG_2246.jpg);
+    background-image: url(AlignMateEntryMainImage.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: block;
     width: 35%;
-    height: 30%;
-    margin: 0px 35%;
+    height: 314px;
+    /* margin: 0px 35%; */
 
 }
 
@@ -1415,12 +1415,29 @@ a {
 }
 
 .newfooter {
-
+text-align: center;
     padding: 30px ;
 display: block;
 width: 100%;
 background-color: white;
 height: auto;
+
+}
+
+.textBox65 {
+    padding-top: 120px;
+    padding-left: 40px;
+    padding-right: 110px;
+    background-color: #c7e9ff;
+    text-align: left;
+    font-size: 20px;
+    font-family: arial;
+    width: 65%;
+
+}
+
+.textBox2 {
+    display: flex;
 
 }
 
