--- a/style.css
+++ b/style.css
@@ -464,6 +464,7 @@ input[type=password] {
         /* flex-direction: row; */
         /* flex-wrap: wrap; */
     justify-content: center;
+    height: 100%;
   
     }
 
@@ -520,14 +521,16 @@ input[type=password] {
 }
 
 .alignMateTop {
+    background-color: #d8f1ff;
     font-family: arial;
     color: black;
-    margin-left: 5%;
-    margin-right: 10%;
-    margin-top: 10px;
+    padding-left: 40px;
+    /* margin-right: 10%; */
+    /* margin-top: 10px; */
     /* margin-bottom: 20px; */
     padding-top: 0px;
-    height: auto;
+    /* height: auto; */
+    width: 610px;
     font-size: 20px;
     font-weight: 600;
     transform: scale(1, 1.3);
@@ -1400,23 +1403,17 @@ a {
     display: block;
     width: 35%;
     height: 314px;
-    /* margin: 0px 35%; */
-
 }
 
 .footer {
     display: block;
-    /* height:220px; */
     width: 100%;
-    /* background-color: #78c1f3; */
     background-color: white;
-    /* box-shadow: 0px 0px #78c1f3; */
     text-align: center; 
 }
 
 .newfooter {
 text-align: center;
-    padding: 30px ;
 display: block;
 width: 100%;
 background-color: white;
@@ -1425,10 +1422,10 @@ height: auto;
 }
 
 .textBox65 {
-    padding-top: 120px;
+    padding-top: 60px;
     padding-left: 40px;
     padding-right: 110px;
-    background-color: #c7e9ff;
+    background-color: rgb(215, 215, 215);
     text-align: left;
     font-size: 20px;
     font-family: arial;
